# backendrust

./: .env  Cargo.toml  README.md
migrations/2020-04-19-084137_add_users/: up.sql
src/: db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/elastic_actor/: mod.rs
src/elastic_actor/elastic_store/: mod.rs
src/elastic_actor/elastic_store/commands/: ensure_index_exists.rs  mod.rs  simple_index.rs
src/elastic_actor/elastic_store/queries/: mod.rs  search.rs
src/elastic_actor/model/: account.rs  index.rs  mod.rs  mytype.rs  mytype_index.rs
src/eventsourcing_actor/: account.rs
src/handlers/: actions.rs  apis.rs  async_auth.rs  auth_jwt.rs  authentication.rs  function_handler.rs  handler.rs  mod.rs  register.rs  user_api.rs
src/models/: mod.rs  user.rs
src/nats_actor/: actor_pub.rs  actor_sub.rs  connection.rs  mod.rs  request.rs
src/order_topic/: mod.rs  publish.rs  subscribe.rs
src/utils/: frankjwt.rs  jwt.rs  mod.rs
test/: my_rsa_2048_key.pem  my_rsa_public_2048_key.pem  test.rs
