[package]
name = "backend_rust"
version = "0.1.0"
authors = ["Nhi Tran <nhi.tran@hawking.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

jwt = "*"
hyper = "*"
rust-crypto = "*"
rustc-serialize = "*"

frank_jwt = "3.1.2"
base64 = "0.12.0"
openssl = "0.10.29"
bcrypt = "0.7.0"

log = "0.4.0"
env_logger = "0.7.1"
actix = "0.9.0"
actix-cors = "0.2.0"
dotenv_codegen = "0.15.0"

