[package]
name = "backend_rust"
version = "0.1.0"
authors = ["Nhi Tran <nhi.tran@hawking.network>"]
edition = "2018"

[lib]
name = "mystore_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.2.0"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-service = "1.0.1"
actix = "0.9.0"
actix-cors = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.2"
futures = { version = "0.3.4", features = ["compat"] }
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.1", features = ["process"] }
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
eventsourcing = { git = "https://github.com/zentechnhitran/eventsourcing.git", branch = "master" }
eventsourcing-derive = "0.1.3"
nats = "0.3.3"
bastion = { git = "https://github.com/bastion-rs/bastion.git", branch = "master" }

hyper = "*"
http = "0.2.1"
url = "2.1.1"
sysinfo = "0.14.5"

backtrace = "0.3"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"
snap = "1.0.0"
console = "0.11.3"
clap = "2.33.1"
quick-error = "1.2.3"
warp = "0.2.2"

rust-crypto = "*"
rustc-serialize = "*"
frank_jwt = "3.1.2"
base64 = "0.12.0"
openssl = "0.10.29"
bcrypt = "0.7.0"
log = "0.4.0"
env_logger = "0.7.1"
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "7.1.0"
rust-argon2 = "0.8"
rand = "0.7.3"
token-generator = "0.1.0"

#juniper = { git = "https://github.com/graphql-rust/juniper" }
#juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
#juniper_warp = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }

